# BotServe

bot/: package-lock.json  package.json
bot/src/: App.tsx  index.tsx
bot/src/components/: chatbot.tsx
bot/src/styles/: chatbot.css
client/: bun.lockb  index.html  package.json
client/src/: App.tsx  index.css  main.tsx  types.ts
client/src/app/dashboard/: layout.tsx
client/src/app/dashboard/api-keys/: page.tsx
client/src/app/dashboard/components/: heading.tsx  (+2 more)
client/src/app/projects/: page.tsx
client/src/app/sign-in/: page.tsx
client/src/app/sign-up/: page.tsx
client/src/components/: chat.tsx  delete-modal.tsx  header.tsx  home-chat.tsx  middleware.tsx  sidebar.tsx  sign-in.tsx  sign-up.tsx
client/src/components/ui/: button-tap.tsx  button.tsx
client/src/lib/: axios.ts
client/src/zustand/: store.ts
python/: pyproject.toml
python/app/: main.py
python/app/controllers/: chatbot.ipynb  chatbot.py
server/: bun.lockb  drizzle.config.ts  package.json  tsconfig.json
server/drizzle/: 0000_tiresome_chameleon.sql  0001_flashy_falcon.sql  0003_safe_bloodaxe.sql  0004_spooky_old_lace.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
server/src/: index.ts
server/src/controllers/: auth.controller.ts  keys.controller.ts
server/src/db/: schema.ts
server/src/middlewares/: auth.middleware.ts
server/src/routes/: auth.route.ts  key.route.ts  keys.route.ts  projects.route.ts
server/src/utils/: jwt.ts
server/types/: fastify.d.ts
test/: package.json
(+14 files in other folders)
