[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "langgraph>=0.6.2",
]
